<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh_menu_button"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh_button_text" />
    <item
        android:id="@+id/search_menu_button"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_button_text"
        />
    <item
        android:id="@+id/filter_sort_menu_button"
        app:showAsAction="always"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/sort_filter_button_text"
        />

    <item
        android:id="@+id/settings_menu_button"
        android:title="@string/settings_button_text" />
    <item
        android:id="@+id/about_menu_button"
        android:title="@string/about_button_text" />
</menu>