<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/pokedex_home">

    <fragment
        android:id="@+id/pokedex_home"
        android:name="com.cis4030.pokedex.ui.pokedex_list.PokedexListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_pokedex_home_to_pokemonDetailFragment"
            app:destination="@id/pokemonDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/pokedex_create"
        android:name="com.cis4030.pokedex.ui.pokedex_create.CustomPokemonListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_creation_list" >
        <action
            android:id="@+id/action_pokedex_create_to_createPokemonFragment"
            app:destination="@id/createPokemonFragment" />
    </fragment>

    <fragment
        android:id="@+id/team_viewer"
        android:name="com.cis4030.pokedex.ui.team.TeamListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_team_list"
        >
        <action
            android:id="@+id/action_team_viewer_to_teamViewFragment"
            app:destination="@id/teamViewFragment">
            <argument
                android:name="teamname"
                app:argType="string"
                android:defaultValue=""
                />
        </action>
    </fragment>
    <fragment
        android:id="@+id/createPokemonFragment"
        android:name="com.cis4030.pokedex.ui.pokedex_create.CreatePokemonFragment"
        android:label="Create New Pokemon"
        tools:layout="@layout/fragment_create_pokemon" />
  
    <fragment
        android:id="@+id/pokemonDetailFragment"
        android:name="com.cis4030.pokedex.ui.pokemon_detail.PokemonDetailFragment"
        android:label="pokemonDetailFragment"
        tools:layout="@layout/fragment_pokemon_detail" >
        <argument
            android:name="pokemonID"
            app:argType="integer"/>
        <action
            android:id="@+id/action_pokemonDetailFragment_to_selectPokemonFragment"
            app:destination="@id/selectPokemonFragment">
            <argument
                android:name="compare"
                app:argType="boolean"
                />
            <argument
                android:name="basePokemon"
                app:argType="string"
                android:defaultValue=""
                />
        </action>
    </fragment>

    <fragment
        android:id="@+id/teamViewFragment"
        android:name="com.cis4030.pokedex.ui.team.TeamViewFragment"
        android:label="TeamViewFragment"
        tools:layout="@layout/fragment_team_view">
        <action
            android:id="@+id/action_teamViewFragment_to_selectPokemonFragment"
            app:destination="@id/selectPokemonFragment" />
    </fragment>
    <fragment
        android:id="@+id/selectPokemonFragment"
        android:name="com.cis4030.pokedex.ui.pokemon_select.SelectPokemonFragment"
        android:label="SelectPokemonFragment"
        tools:layout="@layout/fragment_list_select">
        <action
            android:id="@+id/action_selectPokemonFragment_to_teamViewFragment"
            app:destination="@id/teamViewFragment"
            app:popUpTo="@id/teamViewFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="pokemon"
                android:defaultValue=""
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_selectPokemonFragment_to_compareFragment"
            app:destination="@id/compareFragment"
            app:popUpTo="@id/pokemonDetailFragment"
            app:popUpToInclusive="true">
            <argument
                android:name="pokemon1"
                app:argType="string" />
            <argument
                android:name="pokemon2"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/compareFragment"
        android:name="com.cis4030.pokedex.ui.comparison.CompareFragment"
        android:label="CompareFragment"
        tools:layout="@layout/compare_fragment"/>
</navigation>