<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemon_detail.PokemonDetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/portrait_container"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_weight="0"
            android:background="#FFFFFF"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portrait_container">
            app:layout_constraintBottom_toTopOf="@+id/data_scrollview">

            <ToggleButton
                android:id="@+id/about_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/about_button_text"
                android:textOff="@string/about_button_text"
                android:textOn="@string/about_button_text" />

            <ToggleButton
                android:id="@+id/stats_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stats_button"
                android:textOff="@string/stats_button"
                android:textOn="@string/stats_button" />

            <ToggleButton
                android:id="@+id/moves_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/moves"
                android:textOff="@string/moves"
                android:textOn="@string/moves" />

            <ToggleButton
                android:id="@+id/evolutions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/evolutions"
                android:textOff="@string/evolutions"
                android:textOn="@string/evolutions" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/data_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_container"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/data_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:id="@+id/about_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/description_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/description_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/about_description_header"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/description_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="viewStart" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/egg_group_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingVertical="10dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:id="@+id/linearLayout"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"

                                android:orientation="horizontal"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.16"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/egg_group_label"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:minWidth="0dp"
                                    android:text="@string/egg_group_header"
                                    android:textAlignment="viewStart"
                                    android:textSize="18sp"
                                    android:visibility="visible" />
                            </LinearLayout>

                            <Button
                                android:id="@+id/egg_group_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="100dp"
                                android:backgroundTint="@color/bg_chip_water"
                                android:minWidth="0dp"
                                android:minHeight="0dp"
                                android:textAlignment="center"
                                app:cornerRadius="20dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/egg_group_2"
                                app:layout_constraintHorizontal_bias="1.0"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Button
                                android:id="@+id/egg_group_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:minWidth="0dp"
                                android:minHeight="0dp"
                                android:textAlignment="center"
                                android:visibility="visible"
                                app:cornerRadius="20dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/egg_group_1"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/stats_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="stats data" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/moves_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="moves content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/evolution_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="invisible">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Evolution Data" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>